# model

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  start_v3_app_shot.bat  start_v3_app_shot.ps1
apps/: __init__.py
apps/master-api/: README.md
apps/master_api/: __init__.py  main.py
apps/web-console/: .env.tunnel.example  index.html  package-lock.json  package.json  vite.config.ts
apps/worker_agent/: __init__.py  main.py
configs/action_gateway/: action_gateway_policy.example.json
configs/android/: emulator_profiles.example.json
configs/behavior_learning/: behavior_learning_policy.example.json
configs/behavior_packs/: fps_mock_v1.example.json  fps_real_v1.safe_template.json  moba_mock_v1.example.json  moba_real_v1.safe_template.json
configs/capture/: capture_engine_policy.example.json
configs/content_drivers/: pc_app_content_driver.example.json  web_content_driver.example.json
configs/deploy/: four_machine_topology.example.json  four_machine_topology.production.example.json  m0_master.env.example  m0_master.production.env.example  p13_software_requirements.example.json  w1_pc_game_worker.env.example  w1_pc_game_worker.production.env.example  w2_pc_app_web_worker.env.example  w3_android_worker.env.example  (+2 more)
deploy/: db_admin_repair_p14_4.sql  distributed_ocr_model_matrix.example.json  model_manifest.example.json  ocr_manifest.example.json  role_matrix.json  software_catalog.json
docs/: V3_OBS_OCR_一步到位含模型完整执行方案.md  V3_新电脑单机部署与游戏采集准备.md  V3_模型接入部署与安全边界.md  V3_用户操作手册.md
models/: README.md  model_manifest.example.json
(+630 files in other folders)
