[project]
name = "ai-screenshot-platform"
version = "0.1.0"
description = "Core domain model for the multi-type app/game screenshot collection platform."
requires-python = ">=3.11"
dependencies = [
    "dxcam>=0.0.5",
    "fastapi>=0.136.3",
    "mss>=10.0.0",
    "opencv-python-headless>=4.12.0",
    "playwright>=1.57.0",
    "psycopg[binary]>=3.2.0",
    "pywinauto>=0.6.9",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
